[package]
name = "comms"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.4.10", features = ["derive"] }
iroh = { version = "0.32", default-features = false }
iroh-base = { version = "0.32", features = ["ticket"] }
quinn = { version = "0.13", package = "iroh-quinn" }
tokio = { version = "1.47.0", features = ["full"] }
tokio-util = "0.7.15"
